@@ -4,11 +4,13 @@
 /* rtems compatibility header */
 /* Author: Till Straumann, <strauman@slac.stanford.edu>, 10/2001 */
 
-typedef unsigned char	u8;
-typedef unsigned short	u16;
-typedef unsigned 	u32;
-typedef char		s8;
-typedef short		s16;
-typedef int			s32;
+#include <stdint.h>
+
+typedef uint8_t		u8;
+typedef uint16_t	u16;
+typedef uint32_t 	u32;
+typedef int8_t		s8;
+typedef int16_t		s16;
+typedef int32_t		s32;
 
 #endif
