@@ -1,3 +1,7 @@
+2007-11-30	Till Straumann <strauman@slac.stanford.edu>
+
+	* startup/bspstart: removed _Cpu_table.exceptions_in_RAM.
+
 2007/10/08 (TS):
  - (bspstart.c) resize IBAT0 (and while we're at it DBAT0, too even though
    the latter is disabled once page tables are up) to ONLY cover
